--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,70 +1,107 @@
 .carousel {
-    position: relative;
-    display: flex;
-    align-items: center;
-    max-width: 1440px;
-    margin-left: 60px;
-    margin-right: 60px;
-    height: 260px;
-    overflow: hidden;
+	position: relative;
+	display: flex;
+	align-items: center;
+	max-width: 1440px;
+	margin-left: 51px;
+	margin-right: 43px;
+	overflow: hidden;
+
+	&__leftArrow {
+		margin-right: -10px;
+	}
+
+	&__rightArrow {
+		margin-left: -10px;
+	}
 }
 
-.cards {
-    display: flex;
-    flex-flow: row;
-    transition: transform 0.5s ease;
-    justify-content: flex-start;  // Изменено на flex-start
-    align-items: center;
-    width: 100%;
-    max-width: 1440px;
-    position: relative;
-    overflow: visible;
+.cardsWrapper {
+	width: 1350px;
+	height: 260px;
+	display: flex;
+	align-items: center;
+	overflow: hidden;
+
+	&__cards {
+		display: flex;
+		flex-flow: row;
+		flex-shrink: 0;
+		transition: transform 0.5s ease;
+		justify-content: flex-start;
+		align-items: center;
+		//max-width: 1440px;
+		position: relative;
+		overflow: visible;
+	}
 }
+
 
 .card {
-    width: 400px;
-    height: 225px;
-    margin-right: 30px;
-    flex-shrink: 0;
-    border-radius: 10px;
-    background: #FFF;
-    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.20);
+	width: 400px;
+	height: 225px;
+	margin-right: 15px;
+	margin-left: 15px;
+	flex-shrink: 0;
+	border-radius: 10px;
+	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.20);
 }
 
 .icon {
-    width: 65px;
-    height: 79px;
-    flex-shrink: 0;
-    margin-left: 20px;
-    margin-top: 22px;
-    //background: lightgray 50% / cover no-repeat;
+	width: 65px;
+	height: 79px;
+	flex-shrink: 0;
+	margin-left: 20px;
+	margin-top: 22px;
 }
 
 .textBlock {
-    margin-left: 20px;
-    margin-bottom: 46px;
-    color: #000;
-    font-family: 'Inter', sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: normal;
-    letter-spacing: 0.18px;
+	margin-left: 20px;
+	margin-bottom: 46px;
+	color: #000;
+	font-family: 'Inter', sans-serif;
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	letter-spacing: 0.18px;
 }
 
 .prev,
 .next {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 39px;
-    height: 39px;
-    flex-shrink: 0;
-    opacity: 0.2;
-    background: lightgray 50% / cover no-repeat;
-    cursor: pointer;
+	position: absolute;
+	top: 50%;
+	transform: translateY(-50%);
+	width: 39px;
+	height: 39px;
+	flex-shrink: 0;
+	opacity: 0.2;
+	background: lightgray 50% / cover no-repeat;
+	cursor: pointer;
 }
 
 .firstCard .prev {
-    visibility: hidden;
+	visibility: hidden;
 }
+
+@media (max-width: 767px) {
+	.carousel {
+		max-width: 375px;
+		margin-left: 0;
+		margin-right: 0;
+
+		&__leftArrow {
+			margin-right: 10px;
+		}
+
+		&__rightArrow {
+			margin-left: 0;
+		}
+	}
+
+	.card {
+		width: 298px;
+		height: 188px;
+	}
+
+	}
