--- a/src/pages/SearchPage/SearchPage.module.scss
+++ b/src/pages/SearchPage/SearchPage.module.scss
@@ -1,91 +1,107 @@
 /* SearchPage.module.scss */
 
-.searchPage {
-  display: flex;
+.container {
+	position: relative;
+	display: flex;
+	justify-content: flex-start;
+	width: 1440px;
+	flex-shrink: 0;
 
-  align-items: flex-start;
-  flex-shrink: 0;
-  background: #FFF;
+	&__leftColumn {
+		height: 100vh;
+		width: 100%;
+		display: flex;
+		flex-direction: column;
 
-  @media (max-width: 767px) {
-    flex-direction: column;
-  }
+		&_titleSearchTextBlock {
+			width: 743px;
+			color: #000;
+			font-family: 'FerryBlack', sans-serif;
+			font-size: 45px;
+			font-style: normal;
+			font-weight: 900;
+			line-height: normal;
+			letter-spacing: 0.45px;
+			margin-left: 60px;
+			margin-top: 40px;
+		}
+
+		&_leftTextUnderTitleBlock {
+			width: 534px;
+			display: block;
+			margin-top: 25px;
+			margin-left: 60px;
+			color: #000;
+			font-family: 'Inter', sans-serif;
+			font-size: 20px;
+			font-style: normal;
+			font-weight: 400;
+			line-height: normal;
+			letter-spacing: 0.2px;
+		}
+	}
+
+	&__rightColumn {
+		height: 100vh;
+		width: 100%;
+		margin-top: 115px;
+		display: flex;
+		flex-direction: column;
+
+		&_document {
+			width: 91px;
+			height: 111px;
+			margin-left: 138px;
+		}
+
+		&_folders {
+			width: 91px;
+			height: 111px;
+			margin-left: 390px;
+			margin-top: -85px;
+		}
+	}
 }
 
-.leftColumn {
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
 
-}
+@media (max-width: 767px) {
+	.container {
+		display: block;
+		width: 375px;
+		height: 1632px;
 
-.rightColumn {
-  height: 100vh;
-  width: 100%;
-  margin-top: 115px;
-  display: flex;
-  flex-direction: column;
+		&__leftColumn {
+			display: block;
 
-  @media (max-width: 767px) {
-    flex-direction: column;
-    margin-top: -900px;
-  }
+			&_titleSearchTextBlock {
+				font-size: 28px;
+				width: 361px;
+				letter-spacing: 0.28px;
+				margin-left: 14px;
+			}
 
-  .document {
-    width: 91px;
-    height: 111px;
-    margin-left: 138px;
+			&_leftTextUnderTitleBlock {
+				width: 100%;
+				font-size: 18px;
+				margin-left: 14px;
+			}
+		}
 
-    @media (max-width: 767px) {
-      width: 59px;
-      height: 72px;
-      position: relative;
-      margin-left: 285px;
-      margin-top: 230px;
-    }
-  }
+		&__rightColumn {
+			flex-direction: column;
+			margin-top: -900px;
 
-  .folders {
-    width: 91px;
-    height: 111px;
-    margin-left: 390px;
-    margin-top: -85px;
+			&_document {
+				width: 59px;
+				height: 72px;
+				position: relative;
+				margin-left: 285px;
+				margin-top: 230px;
+			}
 
-    @media (max-width: 767px) {
-      display: none;
-    }
-  }
-}
-
-.leftTextUnderTitleBlock {
-  width: 534px;
-  display: block;
-  margin-top: 25px;
-  min-width: 743px;
-  padding-left: 60px;
-  position: relative;
-  right: -5px;
-
-  @media (max-width: 767px) {
-    font-size: 18px;
-    width: 100%;
-    padding-left: 14px;
-    right: 0;
-
-  }
-}
-
-.leftSmallText {
-  color: #000;
-  font-family: 'Inter', sans-serif;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-  letter-spacing: 0.2px;
-
-  @media (max-width: 767px) {
-    font-size: 18px;
-  }
+			&_folders {
+				display: none;
+			}
+		}
+	}
 }
