--- a/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
+++ b/src/pages/SearchPage/SearchFormCard/SearchFormCard.module.scss
@@ -2,7 +2,7 @@
 @import "../../../styles/mixins/_var";
 @import "../../../styles/mixins/_media";
 
-.leftBlock {
+.container {
 	width: 872px;
 	height: 543px;
 	left: 0;
@@ -11,7 +11,7 @@
 	background: $white;
 	box-shadow: 0 0 20px $shadow;
 	border-radius: 10px;
-	margin-top: 378px;
+	margin-top: 20px;
 	margin-bottom: 64px;
 	margin-left: 53px;
 	align-items: center;
@@ -92,7 +92,7 @@
 	}
 
 	// Диапазон поиска*
-	.leftBlockLabel {
+	&__leftBlockLabel {
 		left: 0;
 		top: 8px;
 		position: absolute;
@@ -106,7 +106,7 @@
 		margin-left: 44px;
 	}
 
-	.leftBlock_dateInputs {
+	&__dateInputs {
 		display: flex;
 		flex-direction: row;
 		margin-left: 44px;
