--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,4 +1,4 @@
-/* fonts.scss */
+/* _fonts.scss */
 
 @font-face {
     font-family: 'Inter';
@@ -6,7 +6,6 @@
 
     font-weight: 400;
     font-style: normal;
-
 }
 
 @font-face {
@@ -15,5 +14,4 @@
 
     font-weight: 400;
     font-style: normal;
-
 }
