--- a/src/components/AppHeader/AppHeader.module.scss
+++ b/src/components/AppHeader/AppHeader.module.scss
@@ -3,13 +3,12 @@
 @import '../../styles/mixins/_var';
 
 .header {
-  max-width: 1440px;
-  height: 93px;
   display: flex;
+  flex-direction: row;
+  max-width: 100%;
+  height: 93px;
   flex-shrink: 0;
-  justify-content: flex-start;
   align-items: center;
-  position: relative;
   padding-right: 60px;
   padding-left: 60px;
 }
