--- a/src/components/AppHeader/AuthenticatedUserInfo/AuthenticatedUserInfo.module.scss
+++ b/src/components/AppHeader/AuthenticatedUserInfo/AuthenticatedUserInfo.module.scss
@@ -1,23 +1,23 @@
 /* AuthenticatedUserInfo.module.scss */
-
+@import "../../../styles/mixins/_typography";
 /* Блок - пользовательская информация */
 .userInfo {
 	display: flex;
+	flex-shrink: 0;
 	align-items: center;
 
 	/* Блок - панель пользователя */
 	.userInfo__userPanel {
 		position: relative;
 		width: 175px;
+		min-width: 175px;
 		height: 63px;
 		margin-right: 128px;
 
 		/* Элемент - прямоугольник панели */
 		&__userPanel_userPanelRectImg {
 			width: 100%;
-			height: 100%;
-			position: relative;
-			margin-right: 160px;
+			height: auto;
 		}
 
 		/* Блок - контейнер информации о компании */
@@ -81,22 +81,18 @@
 	}
 }
 
-
-
 /* Блок - текстовый контейнер */
 .userInfo__userPanelTextContainer {
 	/* Блок - текст юзера */
 	&__userNameText {
-		color: black;
-		font-size: 14px;
-		font-family: 'Inter', sans-serif;
-		font-weight: 400;
-		letter-spacing: 0.14px;
-		word-wrap: break-word;
+		@include text-base;
+
 	}
 
 	/* Блок - текст выхода */
 	&__logoutText {
+		display: flex;
+		justify-content: flex-end;
 		color: black;
 		opacity: 0.40;
 		font-size: 10px;
@@ -104,13 +100,12 @@
 		font-weight: 400;
 		word-wrap: break-word;
 		cursor: pointer;
-		margin-right: 29px;
 	}
 }
 
 /* Блок - аватар */
 .userInfo__avatar {
-	/* стили для аватара */
+	margin-left: 4px;
 }
 
 
