--- a/src/components/Carousel/Carousel.module.scss
+++ b/src/components/Carousel/Carousel.module.scss
@@ -1,10 +1,9 @@
+// Carousel.module.scss
+
 .carousel {
-	position: relative;
 	display: flex;
 	align-items: center;
-	max-width: 1440px;
-	margin-left: 51px;
-	margin-right: 43px;
+	max-width: 1340px;
 	overflow: hidden;
 
 	&__leftArrow {
@@ -17,22 +16,21 @@
 }
 
 .cardsWrapper {
-	width: 1350px;
+	width: 100%;
+	max-width: 1440px;
 	height: 260px;
-	display: flex;
 	align-items: center;
 	overflow: hidden;
 
 	&__cards {
 		display: flex;
-		flex-flow: row;
 		flex-shrink: 0;
 		transition: transform 0.5s ease;
 		justify-content: flex-start;
 		align-items: center;
-		//max-width: 1440px;
-		position: relative;
-		overflow: visible;
+		max-width: 1440px;
+		//position: relative;
+		//overflow: visible;
 	}
 }
 
