--- a/src/components/UI/Button/Button.module.scss
+++ b/src/components/UI/Button/Button.module.scss
@@ -6,5 +6,5 @@
     flex-shrink: 0;
     border-radius: 5px;
     background: #5970FF;
-    margin-top: 70px;
+    box-shadow: 0 0 20px rgba(89, 112, 255, 0.2);
 }
