--- a/src/pages/Main/MainPage.module.scss
+++ b/src/pages/Main/MainPage.module.scss
@@ -1,24 +1,25 @@
 /* MainPage.module.scss */
 
 .mainPage {
-	position: relative;
 	display: flex;
 	flex-direction: column;
-	justify-content: flex-start;
-	width: 1440px;
-	height: 2730px;
-	flex-shrink: 0;
+	max-width: 100%;
+	height: auto;
+
+	padding: 20px 60px 0 60px;
 
 	&__upperBlocks {
 		display: flex;
+		flex-direction: row;
 		justify-content: space-between;
+		width: 100%;
 	}
 
 	&__tariffCardSection {
 		display: flex;
 		justify-content: space-between;
-		margin-left: 60px;
-		margin-right: 60px;
+		//margin-left: 60px;
+		//margin-right: 60px;
 	}
 
 	&__blueCloudImageM {
@@ -31,6 +32,8 @@
 		display: block;
 		width: 375px;
 		height: 3518px;
+
+		padding: 0 26px 0 14px;
 
 		&__upperBlocks {
 			display: block;
