--- a/src/pages/Main/MainTitleTextBlock/MainTitleTextBlock.module.scss
+++ b/src/pages/Main/MainTitleTextBlock/MainTitleTextBlock.module.scss
@@ -1,6 +1,7 @@
 // SearchTitleTextBlock-01.module.scss
 .titleTextBlock {
-	width: 743px;
+	width: 100%;
+	height: auto;
 	color: #000;
 	font-family: 'FerryBlack', sans-serif;
 	font-size: 45px;
@@ -8,9 +9,7 @@
 	font-weight: 900;
 	line-height: normal;
 	letter-spacing: 0.45px;
-	margin-left: 60px;
-	margin-top: 158px;
-	margin-bottom: 60px;
+	margin: 80px 0 50px 0;
 }
 
 @media (max-width: 767px) {
