--- a/src/styles/common.scss
+++ b/src/styles/common.scss
@@ -1,9 +1,9 @@
 // src/styles/common.scss
 
-.app {
-	max-width: 1440px;
 
-	@media (max-width: 767px) {
-		max-width: 335px;
-	}
+.app {
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+
 }
